// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Output Tests Action Full Rendering 1`] = `
<ActionOutput
  contextId="ec123"
  id="actionOutput1"
  output={
    Array [
      Object {
        "content": "Lorem ipsum dolor sit amet",
        "type": 0,
      },
    ]
  }
  showIndexes={true}
>
  <Grid
    className="msg actionOutput"
    columnGap={4}
    columns={
      Array [
        "fit-content(10%)",
        "auto",
      ]
    }
  >
    <div
      className="msg grid actionOutput"
      style={
        Object {
          "columnGap": "4px",
          "gridTemplateColumns": "fit-content(10%) auto",
          "rowGap": undefined,
        }
      }
    >
      <Label
        caption="Lorem ipsum dolor sit amet"
        className="actionLabel"
        onClick={[Function]}
        style={
          Object {
            "gridColumn": "span 2",
          }
        }
        tabIndex={-1}
        type={0}
      >
        <label
          className="msg label actionLabel"
          data-tooltip="expand"
          onClick={[Function]}
          style={
            Object {
              "gridColumn": "span 2",
            }
          }
          tabIndex={-1}
          type={0}
        >
          Lorem ipsum dolor sit amet
        </label>
      </Label>
    </div>
  </Grid>
</ActionOutput>
`;

exports[`Action Output Tests Action Full Rendering 2`] = `
HTMLCollection [
  <label
    __self="[object Object]"
    __source="[object Object]"
    class="msg label actionLabel"
    data-tooltip="expand"
    style="grid-column: span 2;"
    tabindex="-1"
    type="0"
  >
    Lorem ipsum dolor sit amet
  </label>,
]
`;

exports[`Action Output Tests Standard Rendering 1`] = `
<ActionOutput
  contextId="ec123"
  output={Array []}
  showIndexes={false}
>
  <Grid
    className="msg actionOutput"
    columnGap={4}
    columns={
      Array [
        "fit-content(10%)",
        "auto",
      ]
    }
  >
    <div
      className="msg grid actionOutput"
      style={
        Object {
          "columnGap": "4px",
          "gridTemplateColumns": "fit-content(10%) auto",
          "rowGap": undefined,
        }
      }
    />
  </Grid>
</ActionOutput>
`;
